--- a/.verb.md
+++ b/.verb.md
@@ -15,4 +15,10 @@ console.log(filters(['math', 'string']));
 
 ## Attribution
 
-Some of these filters were lifted from TinyLiquid by [Zongmin Lei](leizongmin@gmail.com).
+Some of these filters were ported from:
+
+- TinyLiquid by [Zongmin Lei](leizongmin@gmail.com)
+- Shopify Liquid
+- Jekyll
+
+TODO: add links before publishing.
